# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-01-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_quorum timeout bug
    * Make cloudi_service_quorum handle Byzantine service request failures
      (by default)

2013-12-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update jsx (no more dialyzer errors, yay!)

2013-12-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix floating point usage of count_process and count_thread > 1.0 so that
      floor is used (not ceil!)

2013-12-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update erlang_cassandra
    * Fix the termination of service processes when count_process_dynamic
      ramps-down a service instance
    * Add cloudi:trans_id_age/1

2013-12-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the count_process_dynamic service configuration option for
      dynamically adjusting the number of processes used for a single
      service instance (i.e., single service_id) based on changes in the
      rate of incoming service requests
    * Add the rate-based hibernate service configuration option for internal
      services (a list of options for conditional hibernation)

2013-12-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_http_cowboy:close/1 for forcing a cowboy
      connection to close
    * Have cloudi_service_http_cowboy always add the peer ip address to the
      RequestInfo with the key <<"peer">>
    * Have cloudi_service_http_cowboy always add the peer port number to the
      RequestInfo with the key <<"peer-port">>

2013-12-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the cloudi_service_map_reduce:cloudi_service_map_reduce_new/3
      callback functionality to be more useful for algorithm initialization
    * Add the cloudi_service_map_reduce:cloudi_service_map_reduce_info/3
      for handling active service requests