@@ -8,15 +8,24 @@ uses the same OTP release for both CloudI and the internal CloudI service.
 
 ## DETAILS
 
-The approach with the Hello World 2 Example is for CloudI to load the
-`hello_world2` application after CloudI has started.  The `hello_world2`
-application can be specified within the cloudi.conf or provided
-dynamically to the CloudI Service API, to start the CloudI service
-(separate from the application's supervision hierarchy, if one is present).
-Using this method of deployment (within the same OTP release) the
-`hello_world2` application file can specify CloudI as a dependency by
-listing the `cloudi_core` application as a dependency, unlike the
-approach within the `hello_world1` example.
+The approach with the Hello World 2 Example is for reltool to build
+a release using the CloudI installation on the system at the default
+installation location (e.g., ./configure --prefix="/usr/local/").
+The `hello_world2` internal service configuration can use the
+`automatic_loading` service configuration option set to `false` to depend
+fully on the generated release loading the `hello_world2` application
+and its `hello_world2` module implementation of the `cloudi_service`
+interface.  The reltool.config file includes the applications
+`cloudi_service_api_requests` and `cloudi_service_http_cowboy` since
+they are used in the cloudi.conf but are not listed as `hello_world2`
+application dependencies.  This means that both
+`cloudi_service_api_requests` and `cloudi_service_http_cowboy` utilize
+`automatic_loading` to make sure both the application and the internal
+service module is loaded before each service instance is added.
+So, this is a method of embedding CloudI into an Erlang application by
+using a system installation of CloudI with reltool to package a new release.
+
+`hello_world4` provides the equivalent for relx.
 
 ## USAGE
 
