@@ -21,7 +21,7 @@
         [],
         none,
         5000, 5000, 5000, undefined, undefined, 1, 5, 300,
-        []}
+        [{automatic_loading, false}]}
 ]}.
 {nodes, [
 ]}.
