@@ -9,15 +9,28 @@ service.
 
 ## DETAILS
 
-The approach with the Hello World 3 Example is for CloudI to load the
-`hello_world3` application after CloudI has started.  The `hello_world3`
-application can be specified within the cloudi.conf or provided
-dynamically to the CloudI Service API, to start the CloudI service
-(separate from the application's supervision hierarchy, if one is present).
-Using this method of deployment (within the same OTP release) the
-`hello_world3` application file can specify CloudI as a dependency by
-listing the `cloudi_core` application as a dependency, unlike the
-approach within the `hello_world1` example.
+The approach with the Hello World 3 Example is for CloudI to be
+compiled and installated locally as a rebar dependency
+(so during the build process).  Using rebar in this way is necessary
+due to rebar's lack of support for non-Erlang programming languages.
+However, if you only want internal service support
+(i.e., Erlang-only CloudI usage), you can use the
+[`cloudi_core`](https://github.com/CloudI/cloudi_core) repository as a
+rebar dependency.
+
+The `hello_world3` internal service configuration can use the
+`automatic_loading` service configuration option set to `false` to depend
+fully on the generated release loading the `hello_world3` application
+and its `hello_world3` module implementation of the `cloudi_service`
+interface.  The reltool.config file includes the applications
+`cloudi_service_api_requests` and `cloudi_service_http_cowboy` since
+they are used in the cloudi.conf but are not listed as `hello_world3`
+application dependencies.  This means that both
+`cloudi_service_api_requests` and `cloudi_service_http_cowboy` utilize
+`automatic_loading` to make sure both the application and the internal
+service module is loaded before each service instance is added.
+So, this is a method of embedding CloudI into an Erlang application
+with CloudI as a rebar dependency.
 
 PLEASE NOTE (as of 10/18/2013, CloudI version 1.3.0): rebar was recently
 broken, when fetching the HEAD of https://github.com/rebar/rebar due to
@@ -25,7 +38,8 @@ attempts at improving update-deps functionality.  To avoid problems with
 update-deps you should use the most recent rebar release tag, which is
 `2.1.0-pre`.  This version of rebar is provided within the CloudI repo to
 satisfy build-time dependencies (if the configure script is not
-given --without-rebar).
+given --without-rebar).  This is only a concern when trying to use
+rebar with the `update-deps` command.
 
 ## USAGE
 
