@@ -4,11 +4,14 @@
  ]}.
 {release, {cloudi, "1"},
  [hello_world4,
+  cloudi_service_api_requests,
+  cloudi_service_http_cowboy,
   cloudi_core]}.
 
 {extended_start_script, true}.
 
-{output_dir, "release"}.
+% not yet working, always using "_rel"
+%{output_dir, "release"}.
 
 {overlay, [
   {copy, "./app.config", "releases/{{rel_vsn}}/sys.config"},
