@@ -6,7 +6,6 @@
                              "${CLOUDI_CONFIGURE_ARGS}"},
   {'get-deps', "make install"},
   {'get-deps', "echo 'CloudI is successfully stored as a rebar dependency!'"},
-  {'update-deps', "rm -rf install_local"},
-  {'update-deps', "make install"},
+  {'update-deps', "make uninstall install"},
   {'update-deps', "echo 'CloudI is successfully updated!'"}
   ]}.
